update web content

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <title>The Brain Game Lab</title>
-  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/thebraingamelab.css">
   <script src="js/savegameplaydata.js"></script>
 </head>
 <body>
+  
   <h1>The Brain Game Lab</h1>
   <p>
     <em>Games are an enormously promising tool for research in cognitive science.</em> Traditional laboratory experiments are
@@ -21,7 +20,12 @@
     We're looking for students with a variety of interests and backgrounds, including graphic design, sound/music design, game design, programming, 
     and experimental research experience.
   </p>
-  <p>Want to get updated when we release new games? [email].</p>
+  <p>
+    Want to get updated when we release new games?
+    <input type="text" id="email-signup" placeholder="Email Address"></input>
+    <button id="email-submit">Sign Up</button>
+  </p>
+  
   <h2>Games</h2>
   <p>Forgetful Frog</p>
   <p>Tailgate</p>
