starting to add game template

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
   
   <h1>The Brain Game Lab</h1>
   <p>
-    <em>Games are an enormously promising tool for research in cognitive science.</em> Traditional laboratory experiments are
+    <em class='lead'>Games are an enormously promising tool for research in cognitive science.</em> Traditional laboratory experiments are
     boring for the participant, expensive for the researcher, and study mostly college students at major research universities. 
     A well-designed game, on the other hand, is engaging, attracts volunteers to play, and can reach people all over the world. 
-    With millions of potential participants, researchers can ask questions that have been unanswerable with traditional laboratory methods.
+    With millions of potential participants, research using games can tackle questions that are unanswerable with traditional laboratory methods.
   </p>
   <p>
-    We're designing The Brain Game Lab to be a home for game-based research in cognitive science. We're still in the early stages of work.
-    If you are a Vassar student interested in developing games for research please get in touch with Professor Josh de Leeuw (jdeleeuw@vassar.edu).
-    We're looking for students with a variety of interests and backgrounds, including graphic design, sound/music design, game design, programming, 
-    and experimental research experience.
+    We're designing The Brain Game Lab to be a home for game-based research in cognitive science. We're still in the early 
+    stages of work. If you are a Vassar student interested in developing games for research please get in touch with Professor 
+    Josh de Leeuw (<a href="mailto:jdeleeuw@vassar.edu">jdeleeuw@vassar.edu</a>). We're looking for students with a variety of 
+    interests and backgrounds, including graphic design, sound/music design, game design, programming, and experimental research 
+    experience.
   </p>
   <p>
-    Want to get updated when we release new games?
+    Get updated when we release new games:
     <input type="text" id="email-signup" placeholder="Email Address"></input>
     <button id="email-submit">Sign Up</button>
   </p>
